# easyvietsub

./: .gitignore  README.md  components.json  package-lock.json  package.json  tsconfig.json
scripts/: build-sidecars.ps1  build-sidecars.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar-launcher/: Cargo.toml
src-tauri/sidecar-launcher/src/: main.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/helpers/: mod.rs  paths.rs
src-tauri/src/models/: gemini.rs  media.rs  mod.rs  pipeline.rs  settings.rs  state.rs  subtitle.rs  whisper.rs
src/lib/: constants.ts  errors.ts  srt.ts  types.ts  utils.ts
src/lib/components/: app-shell.svelte  preview-canvas.svelte  tiptap-editor.svelte
src/lib/components/dialogs/: app-dialogs.svelte  pipeline-overlay.svelte
src/lib/components/layout/: sidebar.svelte
src/lib/components/ui/: badge.svelte  button.svelte  card.svelte  circle-progress.svelte  combobox.svelte  field.svelte  input.svelte  menubar.svelte  progress.svelte  select.svelte  separator.svelte  tabs.svelte  textarea.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-content.svelte  alert-dialog-description.svelte  index.ts  (+4 more)
src/lib/components/views/: history-view.svelte  instruction-view.svelte  log-view.svelte  render-view.svelte  settings-view.svelte  translate-view.svelte
src/lib/services/: tauri-commands.ts  tauri.ts
src/lib/stores/: app-store.ts
src/routes/: +page.svelte
(+13 files in other folders)
