[package]
name = "easyvietsub"
version = "0.1.0"
description = "Desktop subtitle workflow for Vietnamese localization"
authors = ["Codex"]
edition = "2021"

[lib]
name = "easyvietsub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
pbkdf2 = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
which = "8"
percent-encoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"
whisper-rs = { version = "0.14", features = [] }
memmap2 = "0.9"
